<resources>
    <string name="app_name">H++</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menuabout">menuaboutActivity</string>
    <string name="title_activity_menustart">menustartActivity</string>
    <string name="title_activity_menureg">menuregActivity</string>
    <string name="title_activity_menulog">menulogActivity</string>
    <string name="title_activity_menuedituser">menuedituserActivity</string>
    <string name="title_activity_add_resturant">AddResturant</string>
    <string name="title_activity_update">Update Page</string>
    <string name="addResturant1">Add Restaurant</string>
    <string name="restMap1">Resturant On Map</string>
    <string name="search1">Search</string>
    <string name="leanguage1">Leanguage</string>
    <string name="editProfile1">Edit Profile</string>
    <string name="logout1">Log out</string>
    <string name="about1">About</string>
    <string name="update1">Update</string>
    <string name="restaurants1">Restaurants</string>
    <string name="options1">Options</string>
    <string name="searchHint1">Search</string>
    <string name="cancell">Cancel</string>
    <string name="savel">Save</string>
    <string name="phone1">Phone</string>
    <string name="emaill">Email</string>
    <string name="password1">Password</string>
    <string name="username1">User Name</string>
    <string name="name1">Name</string>
    <string name="x1">X</string>
    <string name="y1">Y</string>
    <string name="like1">Like</string>
    <string name="address1">Address</string>
    <string name="image1">Image</string>
    <string name="hintname1">Enter Name</string>
    <string name="hintx1">Enter X</string>
    <string name="hinty1">Enter Y</string>
    <string name="hintlike1">Enter Like</string>
    <string name="hintaddress1">Enter Address</string>
    <string name="hintimage1">Enter Image</string>
    <string name="hintphone1">Enter Phone</string>
    <string name="clear1">Clear</string>
    <string name="register1">Register</string>
    <string name="login1">Log In</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_nearby_restaurant">Map</string>
</resources>
