<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mostafa.h.UpdateActivity">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/clearbutton"
        android:layout_alignEnd="@+id/clearbutton"
        android:gravity="center" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/x1"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/y1"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone1"
        android:id="@+id/textView4"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:gravity="center" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/like1"
        android:id="@+id/textView5"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image1"
        android:id="@+id/textView6"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:gravity="center" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintlike1"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:background="#ff17edea"
        android:gravity="center"
        android:layout_alignLeft="@+id/savbutton"
        android:layout_alignStart="@+id/savbutton" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:background="#ff2daeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:rotation="90"
        android:layout_below="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savel"
        android:id="@+id/savbutton"
        android:layout_alignTop="@+id/clearbutton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/clearbutton"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address"
        android:id="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="160dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ff17edea"
        android:layout_alignLeft="@+id/savbutton"
        android:layout_alignStart="@+id/savbutton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_alignTop="@+id/textView"
        android:background="#ff17edea"
        android:layout_alignLeft="@+id/savbutton"
        android:layout_alignStart="@+id/savbutton"
        android:layout_alignRight="@+id/yidid"
        android:layout_alignEnd="@+id/yidid" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xidid"
        android:layout_alignTop="@+id/textView2"
        android:background="#ff17edea"
        android:layout_alignLeft="@+id/savbutton"
        android:layout_alignStart="@+id/savbutton"
        android:layout_alignRight="@+id/editText6"
        android:layout_alignEnd="@+id/editText6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yidid"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:background="#ff17edea" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pidid"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox"
        android:background="#ff17edea"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox" />

</RelativeLayout>
